Fix single project view on mobile

--- a/src/components/Home/Landing/Landing.css
+++ b/src/components/Home/Landing/Landing.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  font-size: 40px;
+  font-size: 36px;
 }
 
 #hl-name {
