--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,7 @@ body {
 a {
 	text-decoration: none;
 }
+
+button:focus {
+	outline: none;
+}
